# NOR-cleaner

./: .gitignore  LICENSE  README.md  install.bat  install.ps1  models_concatenated_data.ipynb  models_merged_data.ipynb  models_one_entry.ipynb  prepare_data.py  pyproject.toml  requirements.txt
cli/: main.py
data_analysis/: data_analysis_features.ipynb  data_analysis_similarity_missing_values.ipynb
data_preparation/: __init__.py  algo_filtering.py  algo_icd_ranges.txt  column_names.py  columns_check.py  data_merge.py  data_preparation.py  drop_columns.py  feature_transformation.py  fold_unfold_merged_data.py  merged_transformation.py  translate_english.py
gui/: __init__.py  app.py  error_box.py  error_wrapper.py  main_menu_frame.py  predict_frame.py  train_frame.py  train_window.py
incorrect_predictions_analysis/: analysis_wrong_preds.ipynb
lib/: __init__.py  algo_filtering.py  column_names.py  dataset_names.py  eval.py  ipython_utils.py  load_dataset.py  log_format.py  merge_records.py  parse.py  permutations.py  utils.py  wrong_preds_cross_val.py
model/: __init__.py  classifier.py  hyperparams.py  load.py  train.py
scripts/: README.md  constants.py  evaluate.py  predict.py  prepare.py  train_model.py
