[project]
name = "NOR-Cleaner"
version = "0.1.0"
authors = [
    {name = "Jozef Kraus"},
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "shap==0.46.0",
    "pandas==2.2.2",
    "numpy==2.0.1",
    "matplotlib==3.9.2",
    "scikit-learn==1.5.1",
    "xgboost==2.1.1",
]

# TODO: Make runnable scripts from the terminal
# such that the user can run the following commands:
# $ nor-cleaner prepare
# $ nor-cleaner train
# $ nor-cleaner predict


[tool.setuptools]
py-modules = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Ignore all jupyter notebooks due to its huge size
exclude = '''
.*\.ipynb$
'''