[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "NOR-Cleaner"
description = "AI model for resolving duplicities in Czech National Oncology Register"
version = "0.1.0"
authors = [
    {name = "Jozef Kraus"},
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "shap==0.46.0",
    "pandas==2.2.2",
    "numpy==2.0.1",
    "matplotlib==3.9.2",
    "scikit-learn==1.5.1",
    "xgboost==2.1.1",
]

[project.scripts]
nor-cleaner = "cli.main:main"

# Find all modules in the project
[tool.setuptools.packages.find]
where = ["."]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Ignore all jupyter notebooks due to its huge size
exclude = '''
.*\.ipynb$
'''